[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avio"
authors = [{name = "Darkstepan"}]
version = "0.3.0"
dependencies = ["importlib_metadata", "toml", "httpx", "aiolimiter", "syncer", "dacite"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = ""
homepage = "https://github.com/Darkstepan/avio"

[project.urls]
Source = "https://github.com/Darkstepan/avio"
